Investigation filter changed to use terms query for status